implemented colored functionality

--- a/game-recolor/index.html
+++ b/game-recolor/index.html
@@ -17,7 +17,7 @@
             <div class="count">
                 <div class="count__title">Счётчик кликов</div>
                 <div class="count__result">
-                    <div class="count__result-text"></div>
+                    <div class="count__result-text">Вы нажали:</div>
                     <div class="count__result-number"></div>
                 </div>
             </div>
