Implemented the project Maze by the terms of the task

--- a/maze/index.html
+++ b/maze/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Maze</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -68,7 +68,7 @@
         </tr>
     </table>
 
-    <table>
+    <table class="buttons">
         <tr>
             <td></td>
             <td><button>UP</button></td>
