finished Maze and Recolor

--- a/game-recolor/index.html
+++ b/game-recolor/index.html
@@ -17,15 +17,18 @@
             <div class="count">
                 <div class="count__title">Счётчик кликов</div>
                 <div class="count__result">
-                    <div class="count__result-text">Вы нажали:</div>
-                    <div class="count__result-number"></div>
+                    <div class="count__result-text">Ты кликнул:</div>
+                    <div class="count__result-number"><span>0</span></div>
+                    <div class="count__result-text">раз</div>
                 </div>
             </div>
         </div>
 
         <div class="wrap">
-            <div class="game__field"></div>
-            <div class="buttons__field"></div>
+            <div class="game__field">
+                <div class="topology"></div>
+                <div class="buttons__field"></div>
+            </div>
         </div>
     </main>
 
