--- a/game-recolor/index.html
+++ b/game-recolor/index.html
@@ -20,6 +20,7 @@
                     <div class="count__result-text">Ты кликнул:</div>
                     <div class="count__result-number"><span>0</span></div>
                     <div class="count__result-text">раз</div>
+                    <button id="clear" class="hide">Конец игры! Нажми, чтобы начать сначала</button>
                 </div>
             </div>
         </div>
