--- a/XMLHttpRequest/front/index.html
+++ b/XMLHttpRequest/front/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Hello</h1>
+    <pre></pre>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
